[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Feedbacks/progress_bar_full (1).png" type="Texture" id=1]
[ext_resource path="res://assets/Feedbacks/division.png" type="Texture" id=2]
[ext_resource path="res://assets/Feedbacks/background_feedback.png" type="Texture" id=3]
[ext_resource path="res://assets/Feedbacks/progress_bar_empty (1).png" type="Texture" id=4]
[ext_resource path="res://assets/Feedbacks/line.png" type="Texture" id=5]
[ext_resource path="res://assets/Feedbacks/paula logo (1).png" type="Texture" id=6]
[ext_resource path="res://assets/Feedbacks/star_full (1).png" type="Texture" id=8]
[ext_resource path="res://scripts/Result/Result.gd" type="Script" id=9]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/buttons/close_button.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float height = 20.0;
uniform float speed = 10.0;
uniform float frequency = 5.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/height = 20.0
shader_param/speed = 10.0
shader_param/frequency = 5.0

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 10 )

[node name="Result" type="Node2D"]
script = ExtResource( 9 )

[node name="Backgound" type="Sprite" parent="."]
position = Vector2( 931, 721 )
scale = Vector2( 2.2279, 2.47431 )
texture = ExtResource( 3 )
offset = Vector2( -129.27, -146 )

[node name="ScoreBar" type="TextureProgress" parent="."]
margin_left = 54.0
margin_top = 131.0
margin_right = 804.0
margin_bottom = 177.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )

[node name="Division" type="Sprite" parent="ScoreBar"]
position = Vector2( 420, 24 )
texture = ExtResource( 2 )

[node name="Division3" type="Sprite" parent="ScoreBar"]
position = Vector2( 548, 24 )
texture = ExtResource( 2 )

[node name="Division5" type="Sprite" parent="ScoreBar"]
position = Vector2( 744, 47.25 )
scale = Vector2( 1, 0.98 )
texture = ExtResource( 2 )

[node name="Division6" type="Sprite" parent="ScoreBar"]
position = Vector2( 744, 58 )
scale = Vector2( 0.999997, 0.98 )
texture = ExtResource( 2 )

[node name="Division4" type="Sprite" parent="ScoreBar"]
position = Vector2( 548, 58 )
texture = ExtResource( 2 )

[node name="Division2" type="Sprite" parent="ScoreBar"]
position = Vector2( 420, 58 )
texture = ExtResource( 2 )

[node name="StarFull1" type="Sprite" parent="ScoreBar"]
position = Vector2( 421, 104 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 8 )

[node name="StarFull2" type="Sprite" parent="ScoreBar"]
position = Vector2( 547, 105 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 8 )

[node name="StarFull3" type="Sprite" parent="ScoreBar"]
position = Vector2( 744, 106 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 8 )

[node name="Result" type="Label" parent="ScoreBar"]
margin_left = -2.0
margin_top = -86.0
margin_right = 410.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "Resultado:"
align = 1
valign = 1

[node name="PaulaSprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 1097, 477 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 6 )

[node name="ResultDescription" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 48.0
margin_top = 322.0
margin_right = 940.0
margin_bottom = 665.0
custom_fonts/normal_font = SubResource( 2 )

[node name="Line" type="Sprite" parent="."]
position = Vector2( 466, 287 )
scale = Vector2( 0.761026, 1.03846 )
texture = ExtResource( 5 )

[node name="FinalScore" type="Label" parent="."]
margin_left = 883.0
margin_top = 134.0
margin_right = 1225.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="BackButton" type="Button" parent="."]
margin_left = 1225.0
margin_top = 2.0
margin_right = 1307.0
margin_bottom = 77.0
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 11 )
flat = true

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
